solved the Dropdown button, need to align

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ body {
     transform: rotate(180deg);
 }
 
+.rotate-back {
+    transition: transform 0.3s ease;
+    transform: rotate(0deg);
+}
+
+
 
 .dropdown, .dropdown2 {
     position: relative;
